Now, a verification of the type of user is included, so the methods that take a user id will now throw exceptions if its not one

--- a/resources/web/creators_pages/Leonardo_Davinci.html
+++ b/resources/web/creators_pages/Leonardo_Davinci.html
@@ -92,7 +92,7 @@
 
  <div class="starter-template">
  <h1>Creator Leonardo_Davinci Page </h1>
- <p class="lead">This is a strange test<div><br></div><div><br></div><div><span style="font-weight: bold;">dfsadf</span></div><div><span style="font-weight: bold;"><br></span></div><h2><span style="font-weight: bold;">fsdfdsf</span></h2></p>
+ <p class="lead">This is a strange test<div><br></div><div><br></div><div><span style="font-weight: bold;">dfsadf</span></div><div><span style="font-weight: bold;"><br></span></div><h2><span style="font-weight: bold;">fsdfdsf<br><br></span></h2><div><span style="font-weight: bold; font-family: 'Courier New';">mmk this is <span style="text-decoration: underline;">courier</span> now BLARP</span></div><div><span style="font-weight: bold; font-family: 'Courier New';"><br></span></div><div><span style="font-weight: bold; font-family: 'Courier New';"><br></span></div><div><span style="font-weight: bold; font-family: 'Courier New';"><br></span></div><div><span style="font-weight: bold; font-family: 'Courier New';"><br></span></div></p>
  </div>
 <div class="row">
 	<div class="col-md-12">
