--- a/resources/web/userdashboard_overview.html
+++ b/resources/web/userdashboard_overview.html
@@ -44,7 +44,7 @@
     <body>
       <!-- Navbars -->
 
-      <!-- Start using sb admin stuff -->
+      <!-- the start of the doc -->
       <div id="wrapper">
 
         <!-- plug into here -->
