Beginning to add a lot to the creators pages
Former-commit-id: ffcd5cb3f3f05bae97be6d2b83796def0e4b5791

--- a/resources/web/creator_overview.html
+++ b/resources/web/creator_overview.html
@@ -171,11 +171,11 @@
            <span class="badge" id="slide-submenu"><i class="fa fa-times"></i></span>
          </li>
 
-         <a class="list-group-item" href="userdashboard_funds.html"><i class="fa fa-bar-chart-o"></i> Price</a>
-         <a class="list-group-item" href="userdashboard_pieces.html"><i class="fa fa-table"></i> Worth</a>
-         <a class="list-group-item" href="userdashboard_prices.html"><i class="fa fa-edit"></i> Rewards</a>
-         <a class="list-group-item" href="userdashboard_prices.html"><i class="fa fa-edit"></i> Backers</a>
-         <a class="list-group-item" href="userdashboard_prices.html"><i class="fa fa-edit"></i> Badges</a>
+         <a class="list-group-item" href="creator_pricing" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Price</a>
+         <a class="list-group-item" href="creator_worth" rel="keep-params"><i class="fa fa-table"></i> Worth</a>
+         <a class="list-group-item" href="creator_rewards" rel="keep-params"><i class="fa fa-edit"></i> Rewards</a>
+         <a class="list-group-item" href="creator_backers" rel="keep-params"><i class="fa fa-edit"></i> Backers</a>
+         <a class="list-group-item" href="userdashboard_prices.html" rel="keep-params"><i class="fa fa-edit"></i> Badges</a>
        </div>
      </div>        
    </div>
@@ -492,6 +492,7 @@
       <script src="../tools.js"></script>
       <script src="../highcharts_templates.js"></script>
       <script src="../creatorpage.js"></script>
+      <script src="../creator_overview.js"></script>
       <script src="../login.js"></script>
 
 
