--- a/resources/web/creator_pricing.html
+++ b/resources/web/creator_pricing.html
@@ -171,11 +171,11 @@
            <span class="badge" id="slide-submenu"><i class="fa fa-times"></i></span>
          </li>
 
-         <a class="list-group-item" href="userdashboard_funds.html"><i class="fa fa-bar-chart-o"></i> Price</a>
-         <a class="list-group-item" href="userdashboard_pieces.html"><i class="fa fa-table"></i> Worth</a>
-         <a class="list-group-item" href="userdashboard_prices.html"><i class="fa fa-edit"></i> Rewards</a>
-         <a class="list-group-item" href="userdashboard_prices.html"><i class="fa fa-edit"></i> Backers</a>
-         <a class="list-group-item" href="userdashboard_prices.html"><i class="fa fa-edit"></i> Badges</a>
+         <a class="list-group-item" href="userdashboard_funds.html" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Price</a>
+         <a class="list-group-item" href="userdashboard_pieces.html" rel="keep-params"><i class="fa fa-table"></i> Worth</a>
+         <a class="list-group-item" href="userdashboard_prices.html" rel="keep-params"><i class="fa fa-edit"></i> Rewards</a>
+         <a class="list-group-item" href="userdashboard_prices.html" rel="keep-params"><i class="fa fa-edit"></i> Backers</a>
+         <a class="list-group-item" href="userdashboard_prices.html" rel="keep-params"><i class="fa fa-edit"></i> Badges</a>
        </div>
      </div>        
    </div>
@@ -202,13 +202,13 @@
    <div class="row">
     <div class="col-md-12">
 
-      <h1 id="page_title"> <small> Your overview</small></h1>
+      <h1 id="page_title"> <small> Pricing</small></h1>
       <ol class="breadcrumb">
-        <li><i class="fa fa-dashboard"></i> Overview</a></li>
+        <li><a href="creator_overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overview</a></li>
+        <li class="active"><i class="fa fa-table"></i> Prices</li>
       </ol>
     </div>
   </div>
-
   <!-- Buy, bid and ask buttons -->
   <div class="row">
     <div class="col-md-12">
@@ -216,28 +216,124 @@
      <button id="askBtn" type="button" class="btn btn-primary" data-toggle="modal" data-target="#askModal">Ask</button>
    </div>
  </div>
- <br>
-
- 
-
-
- <!-- The main body -->
+ <!-- a big ass chart -->
  <div class="row">
-  <div id="main_body" class="col-md-12">
-    <script id="main_body_template" type="x-tmpl-mustache">
-    <p class="lead">{{.}}</p>
-    </script>
+  <div class="col-lg-12">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Price per piece history</h3>
+      </div>
+      <div class="panel-body">
+        <div class = "fullscreen-chart" id="pricing"></div>
+      </div>
+    </div>
+  </div>
+</div><!-- /.row -->
+
+
+
+
+
+</div>
+
+
+<!-- Modals -->
+<div id="bidModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Bid</h4>
+      </div>
+      <div class="modal-body">
+        <form id="bidForm" class="form-horizontal" role="form">
+          <div class="form-group form-group-lg">
+            <label class="col-sm-2 control-label" for="formGroupInputLarge">Price</label>
+            <div class="col-sm-10">
+              <input name="bid" class="form-control" type="text" id="formGroupInputLarge" placeholder="Last price"
+              data-bv-greaterthan="true"
+              data-bv-greaterthan-value=".01"
+              data-bv-greaterthan-message="Must be > .01"
+
+              >
+            </div>
+          </div>
+
+          <div class="form-group form-group-lg">
+            <label class="col-sm-2 control-label" for="formGroupInputLarge">Pieces</label>
+            <div class="col-sm-10">
+              <input name="pieces" class="form-control" type="text" id="formGroupInputLarge" placeholder="Pieces"
+              type="text" 
+              data-bv-integer="true"
+              data-bv-integer-message="Must be a whole number"
+
+              >
+            </div>
+          </div>
+
+          <div class="form-group form-group-lg">
+            <label class="col-sm-2 control-label" for="formGroupInputLarge">Date</label>
+            <div class="col-sm-10">
+              <input name="validUntil" class="form-control datepicker" type="text" id="formGroupInputLarge" placeholder="Valid Until...">
+            </div>
+          </div>
+
+          <button id="placebidBtn" type="submit" class="btn btn-primary">Place Bid</button>
+        </form>
+
+      </div>
+
+    </div>
   </div>
 </div>
+<div id="askModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
 
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Ask</h4>
+      </div>
+      <div class="modal-body">
+        <form id="askForm" class="form-horizontal" role="form">
+          <div class="form-group form-group-lg">
+            <label class="col-sm-2 control-label" for="formGroupInputLarge">Price</label>
+            <div class="col-sm-10">
+              <input name="ask" class="form-control" type="text" id="formGroupInputLarge" placeholder="Last price"
+              data-bv-greaterthan="true"
+              data-bv-greaterthan-value=".01"
+              data-bv-greaterthan-message="Must be > .01"
 
+              >
+            </div>
+          </div>
 
+          <div class="form-group form-group-lg">
+            <label class="col-sm-2 control-label" for="formGroupInputLarge">Pieces</label>
+            <div class="col-sm-10">
+              <input name="pieces" class="form-control" type="text" id="formGroupInputLarge" placeholder="Pieces"
+              type="text" 
+              data-bv-integer="true"
+              data-bv-integer-message="Must be a whole number"
 
+              >
+            </div>
+          </div>
 
+          <div class="form-group form-group-lg">
+            <label class="col-sm-2 control-label" for="formGroupInputLarge">Date</label>
+            <div class="col-sm-10">
+              <input name="validUntil" class="form-control datepicker" type="text" id="formGroupInputLarge" placeholder="Valid Until...">
+            </div>
+          </div>
+
+          <button id="placeaskBtn" type="submit" class="btn btn-primary">Place Ask</button>
+        </form>
+
+      </div>
+
+    </div>
+  </div>
 </div>
-
-
-
 <!-- end of wrapper -->
 </div>
 
@@ -269,6 +365,7 @@
       <script src="../tools.js"></script>
       <script src="../highcharts_templates.js"></script>
       <script src="../creatorpage.js"></script>
+      <script src="../creator_pricing.js"></script>
       <script src="../login.js"></script>
 
 
