--- a/resources/web/creator_overview.html
+++ b/resources/web/creator_overview.html
@@ -167,7 +167,7 @@
         </div>
         <div class="list-group">
           <li class="list-group-item">
-           <a href="userdashboard_overview.html"><i class="fa fa-dashboard"></i> Overview</a>
+           <a href="creator_overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overview</a>
            <span class="badge" id="slide-submenu"><i class="fa fa-times"></i></span>
          </li>
 
@@ -194,159 +194,166 @@
 
   </div> -->
 
-
-
-  <!-- The Page -->
-  <div id="main_col" class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main">
+  <div class="span2 col-md-2" style="position:absolute; right:0">  
+   <!-- The boxes on the right this time-->
 
    <div class="row">
-    <div class="col-md-12">
+    <div class="col-lg-12">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col-xs-4">
+              <i class="fa fa-bank fa-5x"></i>
+            </div>
+            <div id ="worth_current" class="col-xs-8 text-right">
+              <script id="worth_current_template" type="x-tmpl-mustache"> 
+              <p class="announcement-heading"><i class="fa fa-btc"></i>{{.}}</p>
 
-      <h1 id="page_title"> <small> Your overview</small></h1>
-      <ol class="breadcrumb">
-        <li><i class="fa fa-dashboard"></i> Overview</a></li>
-      </ol>
+              <p class="announcement-text">Worth</p>
+              </script>
+            </div>
+          </div>
+        </div>
+        <a href="userdashboard_funds">
+          <div class="panel-footer announcement-bottom">
+            <div class="row">
+              <div class="col-xs-6">
+                View Worth
+              </div>
+              <div class="col-xs-6 text-right">
+                <i class="fa fa-arrow-circle-right"></i>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
     </div>
   </div>
-
-  <!-- Buy, bid and ask buttons -->
   <div class="row">
-    <div class="col-md-12">
-     <button id="bidBtn" type="button" class="btn btn-primary" data-toggle="modal" data-target="#bidModal">Bid</button>
-     <button id="askBtn" type="button" class="btn btn-primary" data-toggle="modal" data-target="#askModal">Ask</button>
-   </div>
- </div>
- <br>
-
- <!-- The boxes -->
- <div class="row">
-  <div class="col-lg-3">
-    <div class="panel panel-info">
-      <div class="panel-heading">
-        <div class="row">
-          <div class="col-xs-4">
-            <i class="fa fa-bank fa-5x"></i>
-          </div>
-          <div id ="worth_current" class="col-xs-8 text-right">
-            <script id="worth_current_template" type="x-tmpl-mustache"> 
-            <p class="announcement-heading"><i class="fa fa-btc"></i>{{.}}</p>
-
-            <p class="announcement-text">Worth</p>
-            </script>
-          </div>
-        </div>
-      </div>
-      <a href="userdashboard_funds">
-        <div class="panel-footer announcement-bottom">
+    <div class="col-lg-12">
+      <div class="panel panel-success">
+        <div class="panel-heading">
           <div class="row">
-            <div class="col-xs-6">
-              View Worth
+            <div class="col-xs-4">
+              <i class="fa fa-money fa-5x"></i>
             </div>
-            <div class="col-xs-6 text-right">
-              <i class="fa fa-arrow-circle-right"></i>
+            <div id="price_per_piece_current" class="col-xs-8 text-right">
+              <script id="price_per_piece_current_template" type="x-tmpl-mustache"> 
+              <p class="announcement-heading"><i class="fa fa-btc"></i>{{.}}</p>
+
+              <p class="announcement-text">Price per piece</p>
+              </script>
             </div>
           </div>
         </div>
-      </a>
+        <a href="#">
+          <div class="panel-footer announcement-bottom">
+            <div class="row">
+              <div class="col-xs-6">
+                View Pricing
+              </div>
+              <div class="col-xs-6 text-right">
+                <i class="fa fa-arrow-circle-right"></i>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
     </div>
   </div>
-
-  <div class="col-lg-3">
-    <div class="panel panel-success">
-      <div class="panel-heading">
-        <div class="row">
-          <div class="col-xs-4">
-            <i class="fa fa-money fa-5x"></i>
-          </div>
-          <div id="price_per_piece_current" class="col-xs-8 text-right">
-            <script id="price_per_piece_current_template" type="x-tmpl-mustache"> 
-            <p class="announcement-heading"><i class="fa fa-btc"></i>{{.}}</p>
-
-            <p class="announcement-text">Price per piece</p>
-            </script>
-          </div>
-        </div>
-      </div>
-      <a href="#">
-        <div class="panel-footer announcement-bottom">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="panel panel-warning">
+        <div class="panel-heading">
           <div class="row">
-            <div class="col-xs-6">
-              View Pricing
+            <div class="col-xs-4">
+              <i class="fa fa-cubes fa-5x"></i>
             </div>
-            <div class="col-xs-6 text-right">
-              <i class="fa fa-arrow-circle-right"></i>
+            <div id="rewards_paid" class="col-xs-8 text-right">
+              <script id="rewards_paid_template" type="x-tmpl-mustache"> 
+              <p class="announcement-heading"><i class="fa fa-btc"></i>{{.}}</p>
+
+              <p class="announcement-text">Rewards Paid</p>
+              </script>
             </div>
           </div>
         </div>
-      </a>
+        <a href="userdashboard_pieces">
+          <div class="panel-footer announcement-bottom">
+            <div class="row">
+              <div class="col-xs-6">
+                View Rewards
+              </div>
+              <div class="col-xs-6 text-right">
+                <i class="fa fa-arrow-circle-right"></i>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
     </div>
   </div>
-
-  <div class="col-lg-3">
-    <div class="panel panel-warning">
-      <div class="panel-heading">
-        <div class="row">
-          <div class="col-xs-4">
-            <i class="fa fa-cubes fa-5x"></i>
-          </div>
-          <div id="rewards_paid" class="col-xs-8 text-right">
-            <script id="rewards_paid_template" type="x-tmpl-mustache"> 
-            <p class="announcement-heading"><i class="fa fa-btc"></i>{{.}}</p>
-
-            <p class="announcement-text">Rewards Paid</p>
-            </script>
-          </div>
-        </div>
-      </div>
-      <a href="userdashboard_pieces">
-        <div class="panel-footer announcement-bottom">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="panel panel-danger">
+        <div class="panel-heading">
           <div class="row">
-            <div class="col-xs-6">
-              View Rewards
+            <div class="col-xs-4">
+              <i class="fa fa-empire fa-5x"></i>
             </div>
-            <div class="col-xs-6 text-right">
-              <i class="fa fa-arrow-circle-right"></i>
+            <div id="backers_current_count" class="col-xs-8 text-right">
+
+              <script id="backers_current_count_template" type="x-tmpl-mustache">
+              <p class="announcement-heading">{{.}}</p>
+
+              <p class="announcement-text"># of Backers</p>
+              </script> 
             </div>
           </div>
         </div>
-      </a>
+        <a href="userdashboard_pieces">
+          <div class="panel-footer announcement-bottom">
+            <div class="row">
+              <div class="col-xs-6">
+                View Backers
+              </div>
+              <div class="col-xs-6 text-right">
+                <i class="fa fa-arrow-circle-right"></i>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
     </div>
   </div>
-
-  <div class="col-lg-3">
-    <div class="panel panel-danger">
-      <div class="panel-heading">
-        <div class="row">
-          <div class="col-xs-4">
-            <i class="fa fa-empire fa-5x"></i>
-          </div>
-          <div id="backers_current_count" class="col-xs-8 text-right">
-
-            <script id="backers_current_count_template" type="x-tmpl-mustache">
-            <p class="announcement-heading">{{.}}</p>
-
-            <p class="announcement-text"># of Backers</p>
-            </script> 
-          </div>
-        </div>
-      </div>
-      <a href="userdashboard_pieces">
-        <div class="panel-footer announcement-bottom">
-          <div class="row">
-            <div class="col-xs-6">
-              View Backers
-            </div>
-            <div class="col-xs-6 text-right">
-              <i class="fa fa-arrow-circle-right"></i>
-            </div>
-          </div>
-        </div>
-      </a>
-    </div>
-  </div>
-
-  <!-- End of the boxes -->
 </div>
+
+<!-- The Page -->
+<div id="main_col" class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 main">
+
+ <div class="row">
+  <div class="col-md-12">
+
+    <h1 id="page_title"> <small> Your overview</small></h1>
+    <ol class="breadcrumb">
+      <li><i class="fa fa-dashboard"></i> Overview</a></li>
+    </ol>
+  </div>
+</div>
+
+<!-- Buy, bid and ask buttons -->
+<div class="row">
+  <div class="col-md-12">
+   <button id="bidBtn" type="button" class="btn btn-primary" data-toggle="modal" data-target="#bidModal">Bid</button>
+   <button id="askBtn" type="button" class="btn btn-primary" data-toggle="modal" data-target="#askModal">Ask</button>
+ </div>
+</div>
+<br>
+
+
+
+<!-- End of the boxes -->
+
 
 <!-- The main body -->
 <div class="row">
