--- a/resources/web/creator_pricing.html
+++ b/resources/web/creator_pricing.html
@@ -167,14 +167,14 @@
         </div>
         <div class="list-group">
           <li class="list-group-item">
-           <a href="userdashboard_overview.html"><i class="fa fa-dashboard"></i> Overview</a>
+            <a href="creator_overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overview</a>
            <span class="badge" id="slide-submenu"><i class="fa fa-times"></i></span>
          </li>
 
-         <a class="list-group-item" href="userdashboard_funds.html" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Price</a>
-         <a class="list-group-item" href="userdashboard_pieces.html" rel="keep-params"><i class="fa fa-table"></i> Worth</a>
-         <a class="list-group-item" href="userdashboard_prices.html" rel="keep-params"><i class="fa fa-edit"></i> Rewards</a>
-         <a class="list-group-item" href="userdashboard_prices.html" rel="keep-params"><i class="fa fa-edit"></i> Backers</a>
+         <a class="list-group-item" href="creator_pricing" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Price</a>
+         <a class="list-group-item" href="creator_worth" rel="keep-params"><i class="fa fa-table"></i> Worth</a>
+         <a class="list-group-item" href="creator_rewards" rel="keep-params"><i class="fa fa-edit"></i> Rewards</a>
+         <a class="list-group-item" href="creator_backers" rel="keep-params"><i class="fa fa-edit"></i> Backers</a>
          <a class="list-group-item" href="userdashboard_prices.html" rel="keep-params"><i class="fa fa-edit"></i> Badges</a>
        </div>
      </div>        
@@ -229,6 +229,81 @@
     </div>
   </div>
 </div><!-- /.row -->
+
+<div class="row"> 
+  <div class="col-md-6">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Bids and Asks</h3>
+      </div>
+      <div id="bids_asks" class="panel-body">
+        <script id="bids_asks_template" type="x-tmpl-mustache"> 
+        <table id="bids_asks_table" class="table table-hover table-striped tablesorter">
+        <thead> 
+        <tr>
+        <th>Time <i class="fa fa-sort"></i></th>
+        <th>User <i class="fa fa-sort"></th>
+        <th>Type <i class="fa fa-sort"></th>
+        <th>Price <i class="fa fa-sort"></th>
+        </tr>
+        </thead>
+
+        <tbody>
+
+        {{#.}}
+
+        <tr> 
+        <td>{{time_}}</td>
+        <td>{{users_name}}</td>
+        <td>{{type}}</td>
+        <td>{{price}}</td>
+        </tr>
+        {{/.}}
+
+        </tbody>
+        </script>
+      </table>
+
+    </div>
+  </div>
+</div>
+
+<div class="col-md-6">
+  <div class="panel panel-primary">
+    <div class="panel-heading">
+      <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Pieces issued</h3>
+    </div>
+    <div id="pieces_issued" class="panel-body">
+      <script id="pieces_issued_template" type="x-tmpl-mustache"> 
+      <table id="pieces_issued_table" class="table table-hover table-striped tablesorter">
+      <thead> 
+      <tr>
+      <th>Time <i class="fa fa-sort"></i></th>
+      <th>Pieces issued <i class="fa fa-sort"></th>
+      <th>Price per piece <i class="fa fa-sort"></th>
+      </tr>
+      </thead>
+
+      <tbody>
+
+      {{#.}}
+
+      <tr> 
+      <td>{{time_}}</td>
+      <td>{{pieces_issued}}</td>
+      <td>{{price_per_piece}}</td>
+      </tr>
+      {{/.}}
+
+      </tbody>
+      </script>
+    </table>
+
+  </div>
+</div>
+</div>
+
+</div>
 
 
 
