--- a/resources/web/creator_overview.html
+++ b/resources/web/creator_overview.html
@@ -326,7 +326,7 @@
       </div>
     </div>
   </div>
-   <div class="row">
+  <div class="row">
     <div class="col-lg-12">
       <div class="panel">
         <div class="panel-heading">
@@ -367,7 +367,8 @@
  <div class="row">
   <div class="col-md-12">
 
-    <h1 id="page_title"> <small> Your overview</small></h1>
+    <h1 id="page_title"> </h1>
+
     <ol class="breadcrumb">
       <li><i class="fa fa-dashboard"></i> Overview</a></li>
     </ol>
@@ -376,10 +377,11 @@
 
 <!-- Buy, bid and ask buttons -->
 <div class="row">
-  <div class="col-md-12">
-   <button id="bidBtn" type="button" class="btn btn-primary" data-toggle="modal" data-target="#bidModal">Bid</button>
-   <button id="askBtn" type="button" class="btn btn-primary" data-toggle="modal" data-target="#askModal">Ask</button>
- </div>
+  <div class="col-md-12 btn-group">
+    <button id="buyBtn" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#buyModal">Buy</button>
+    <button id="bidBtn" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#bidModal">Bid</button>
+    <button id="askBtn" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#askModal">Ask</button>
+  </div>
 </div>
 <br>
 
