Starting to work on some hiding/showing of bid/ask/buy buttons based on piece availability

--- a/resources/web/creator_overview.html
+++ b/resources/web/creator_overview.html
@@ -367,7 +367,22 @@
  <div class="row">
   <div class="col-md-12">
 
-    <h1 id="page_title"> </h1>
+    <div class="col-md-8">
+      <h1 id="page_title"> </h1>
+    </div>
+    <div class="col-md-4">
+      <div class="col-md-12">
+           <button id="askBtn" type="button" class="btn btn-warning btn-lg hide pull-right" data-toggle="modal" data-target="#askModal">Ask</button>
+           <button id="bidBtn" type="button" class="btn btn-info btn-lg pull-right" data-toggle="modal" data-target="#bidModal">Bid</button>
+        <button id="buyBtn" type="button" class="btn btn-success btn-lg hide pull-right" data-toggle="modal" data-target="#buyModal">Buy</button>
+        
+     
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
 
     <ol class="breadcrumb">
       <li><i class="fa fa-dashboard"></i> Overview</a></li>
@@ -375,13 +390,10 @@
   </div>
 </div>
 
+
 <!-- Buy, bid and ask buttons -->
 <div class="row">
-  <div class="col-md-12 btn-group">
-    <button id="buyBtn" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#buyModal">Buy</button>
-    <button id="bidBtn" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#bidModal">Bid</button>
-    <button id="askBtn" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#askModal">Ask</button>
-  </div>
+
 </div>
 <br>
 
