--- a/resources/web/creator_overview.html
+++ b/resources/web/creator_overview.html
@@ -373,7 +373,7 @@
     <div class="col-md-4">
       <div class="col-md-12">
            <button id="askBtn" type="button" class="btn btn-warning btn-lg hide pull-right" data-toggle="modal" data-target="#askModal">Ask</button>
-           <button id="bidBtn" type="button" class="btn btn-info btn-lg pull-right" data-toggle="modal" data-target="#bidModal">Bid</button>
+           <button id="bidBtn" type="button" class="btn btn-info btn-lg hide pull-right" data-toggle="modal" data-target="#bidModal">Bid</button>
         <button id="buyBtn" type="button" class="btn btn-success btn-lg hide pull-right" data-toggle="modal" data-target="#buyModal">Buy</button>
         
      
