fixed up creators activity to include pieces issued, sales among users, transactions(IE withdrawals), and bids and asks

--- a/resources/web/creator_pricing.html
+++ b/resources/web/creator_pricing.html
@@ -234,7 +234,7 @@
   <div class="col-md-6">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Bids and Asks</h3>
+        <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Current Bids and Asks</h3>
       </div>
       <div id="bids_asks" class="panel-body">
         <script id="bids_asks_template" type="x-tmpl-mustache"> 
