--- a/resources/web/creator_overview.html
+++ b/resources/web/creator_overview.html
@@ -487,7 +487,7 @@
 					<div class="form-group form-group-lg">
 						<label class="col-sm-2 control-label" for="formGroupInputLarge">Pieces</label>
 						<div class="col-sm-10">
-							<input name="pieces" class="form-control" type="text" id="formGroupInputLarge" placeholder="Pieces"
+							<input name="pieces_owned_total" class="form-control" type="text" id="formGroupInputLarge" placeholder="Pieces"
 							type="text" 
 							data-bv-integer="true"
 							data-bv-integer-message="Must be a whole number"
@@ -540,7 +540,6 @@
 							>
 						</div>
 					</div>
-
 
 					<button id="placebuyBtn" type="submit" class="btn btn-primary">Place buy</button>
 				</form>
